--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ function updateGameArea() {
     myGameArea.clear();
     myGamePiece.speedX = 0;
     myGamePiece.speedY = 0;    
-    if (myGameArea.keys && myGameArea.keys[37] || myGameArea.keys[65]) {myGamePiece.speedX = -2; }
-    if (myGameArea.keys && myGameArea.keys[39] || myGameArea.keys[68]) {myGamePiece.speedX = 2; }
-    if (myGameArea.keys && myGameArea.keys[38] || myGameArea.keys[87]) {myGamePiece.speedY = -2; }
-    if (myGameArea.keys && myGameArea.keys[40] || myGameArea.keys[83]) {myGamePiece.speedY = 2; }
+    if (myGameArea.keys && myGameArea.keys[37] || myGameArea.keys && myGameArea.keys[65]) {myGamePiece.speedX = -2; }
+    if (myGameArea.keys && myGameArea.keys[39] || myGameArea.keys && myGameArea.keys[68]) {myGamePiece.speedX = 2; }
+    if (myGameArea.keys && myGameArea.keys[38] || myGameArea.keys && myGameArea.keys[87]) {myGamePiece.speedY = -2; }
+    if (myGameArea.keys && myGameArea.keys[40] || myGameArea.keys && myGameArea.keys[83]) {myGamePiece.speedY = 2; }
     myGamePiece.newPos();    
     myGamePiece.update();
 }
 </script>
-<p>Make sure this window has focus, then use the arrow keys on your keyboard to move the red square.</p>
+<p>Make sure this window has focus, then use the arrow keys or WASD keys on your keyboard to move the red square.</p>
 </body>
 </html>
